<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="16dp"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="24dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/application_developer"
                android:textColor="@color/primary_black"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_bookMark"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/bookmark"
                android:src="@drawable/ic_bookmarks_outlined"
                app:tint="@color/primary_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="Mumbai, India"
                android:textColor="@color/primary_black_30"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:id="@+id/tv_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/_12000_month"
                android:textColor="@color/primary_black_30"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/_91_9999999999"
                android:textColor="@color/primary_black_30"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/btn_apply"
            android:layout_marginEnd="8dp"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="1dp"
            app:cornerRadius="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/view"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/primary_blue"
            android:fontFamily="@font/lato_bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            app:backgroundTint="@color/primary_blue"
            app:cornerRadius="16dp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>